--- a/FrontEnd/Vaishnavi/AgrogetApplication/assets/css/templatemo-edu-meeting.css
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/assets/css/templatemo-edu-meeting.css
@@ -267,6 +267,7 @@ body {
   color: #fff;
 }
 
+
 /* 
 ---------------------------------------------
 header
@@ -837,13 +838,13 @@ services
 */
 
 .services {
-  margin-top: -135px;
+  margin-top: 400px;
   position: absolute;
   width: 100%;
 }
 
 .services .item {
-  background-image: url(../images/service-item-bg.jpg);
+  background-image: url(../images/images.jfif);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -947,11 +948,7 @@ services
   justify-content: center;
 }
 
-.setborder
-{
-  border: 20px solid white;
-  border-radius: 37px;
-}
+
 /*
 ---------------------------------------------
 upcoming meetings
@@ -1391,12 +1388,12 @@ contact us
 */
 
 section.contact-us {
-  /* background-image: url(../images/meetings-bg.jpg);*/
+   background-image: url(../images/background.jpg);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 40px 0px 0px 0px;
+  padding: 20px 0px 0px 0px;
 }
 
 section.contact-us #contact {
@@ -1447,6 +1444,10 @@ section.contact-us #contact textarea {
   margin-bottom: 30px;
 }
 
+.img
+{
+  width: 70px;
+}
 section.contact-us #contact button {
   font-size: 13px;
   color: #fff;
@@ -1459,7 +1460,7 @@ section.contact-us #contact button {
   transition: all 0.3s;
   border: none;
   outline: none;
-  margin-left: 350px;
+
 }
 
 section.contact-us #contact button:hover {
@@ -1527,7 +1528,7 @@ section.heading-page {
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 150px;
-  padding-bottom: 110px;
+  padding-bottom: 5px;
   text-align: center;
 }
 
