--- a/FrontEnd/Vaishnavi/AgrogetApplication/assets/css/templatemo-edu-meeting.css
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/assets/css/templatemo-edu-meeting.css
@@ -1502,7 +1502,7 @@ section.contact-us .right-info ul li span {
 
 .footer {
   text-align: center;
-  margin-top: 140px;
+  margin-top: 700px;
   border-top: 1px solid rgba(250, 250, 250, 0.15);
   padding: 50px 0px;
 }
@@ -1514,6 +1514,11 @@ section.contact-us .right-info ul li span {
 
 .footer p a {
   color: #f5a425;
+}
+
+.height
+{
+  height: 60px;
 }
 
 /*
@@ -1750,6 +1755,35 @@ section.meetings-page .pagination ul li a:hover {
 .templatemo-item-col {
   width: 31%;
 }
+
+/* My Css*/
+.btn
+{
+    height: 40px;
+    border-radius: 20px;
+    background-color: #f7f7f7;
+    outline: none;
+    border: none;
+    box-shadow: none;
+    font-size: 13px;
+    font-weight: 500;
+    color: green;
+    padding: 10px 15px;
+    margin-bottom: 30px;
+    width: 280px;
+    text-align: left;
+}
+button, input, optgroup, select, textarea {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+* {
+    box-sizing: border-box;
+}
+
+
 
 @media (max-width: 992px) {
   .templatemo-item-col {
