--- a/FrontEnd/Laxman/Agroget_FrontEnd/assets/css/templatemo-edu-meeting.css
+++ b/FrontEnd/Laxman/Agroget_FrontEnd/assets/css/templatemo-edu-meeting.css
@@ -45,30 +45,20 @@ figure, header, nav, section, article, aside, footer, figcaption {
 }
 
 /*Map start*/
-#templatemo-contact {
-	margin-top:100px; 
-	border-top: 1px solid #cccccc; 
-	font-size:14px;
+.googlemap{
+ position: relative;
+ overflow: hidden;
+ padding-top: 56.25%;
 }
-.templatemo-contact-map {
-    margin-bottom: -20px;
-    height: 400px;
-    border-radius: 20px;
-
-}
-.head_contact {
-  padding-bottom:80px; 
-  margin-bottom:0;
+.googlemap iframe{
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ border-radius: 20px;
 }
 
-.contact_right img {
-margin-right:5px;
-}
-
-.contact_right form {
-padding-left:15px;
-padding-right:15px
-}
 /*Map end*/
 
 
