--- a/FrontEnd/Vaishnavi/AgrogetApplication/assets/css/templatemo-edu-meeting.css
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/assets/css/templatemo-edu-meeting.css
@@ -91,6 +91,7 @@ section,
 article,
 aside,
 footer,
+
 figcaption {
   margin: 0;
   padding: 0;
@@ -190,6 +191,8 @@ img {
 global styles
 --------------------------------------------- 
 */
+
+
 html,
 body {
   background: #fff;
@@ -1468,7 +1471,7 @@ section.contact-us #contact button:hover {
 }
 
 section.contact-us .right-info {
-  background-color: #a12c2f;
+  background-color: burlywood;
   border-radius: 20px;
   padding: 40px;
 }
@@ -1502,10 +1505,26 @@ section.contact-us .right-info ul li span {
 
 .footer {
   text-align: center;
+  margin-top: 30px;
+  border-top: 1px solid rgba(250, 250, 250, 0.15);
+  padding: 50px 0px;
+}
+.footer-main{
+  text-align: center;
   margin-top: 700px;
   border-top: 1px solid rgba(250, 250, 250, 0.15);
   padding: 50px 0px;
 }
+.footer-main p {
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #fff;
+}
+
+.footer-main p a {
+  color: #f5a425;
+}
+
 .footer p {
   text-transform: uppercase;
   font-size: 14px;
@@ -1768,9 +1787,9 @@ section.meetings-page .pagination ul li a:hover {
     font-size: 13px;
     font-weight: 500;
     color: green;
-    padding: 10px 15px;
+    padding: 10px 20px;
     margin-bottom: 30px;
-    width: 280px;
+    width: 154px;
     text-align: left;
 }
 button, input, optgroup, select, textarea {
@@ -1782,8 +1801,13 @@ button, input, optgroup, select, textarea {
 * {
     box-sizing: border-box;
 }
-
-
+/*
+----------------------------------------------------
+*/
+.search-item
+{
+  padding-top: 600px;
+}
 
 @media (max-width: 992px) {
   .templatemo-item-col {
