index page updated

--- a/FrontEnd/Vaishnavi/AgrogetApplication/assets/css/templatemo-edu-meeting.css
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/assets/css/templatemo-edu-meeting.css
@@ -756,7 +756,6 @@ banner
 .main-banner {
   position: relative;
   max-height: 100%;
-  overflow: hidden;
   margin-bottom: -7px;
 }
 
@@ -799,7 +798,7 @@ banner
 }
 
 .main-banner .caption h2 {
-  margin-top: 20px;
+  margin-top: -853px;
   margin-bottom: 20px;
   font-size: 36px;
   text-transform: uppercase;
@@ -841,7 +840,7 @@ services
 */
 
 .services {
-  margin-top: 400px;
+  margin-top: -600px;
   position: absolute;
   width: 100%;
 }
@@ -1776,6 +1775,22 @@ section.meetings-page .pagination ul li a:hover {
 }
 
 /* My Css*/
+.btn1
+{
+    height: 40px;
+    border-radius: 20px;
+    background-color: #f7f7f7;
+    outline: none;
+    border: none;
+    box-shadow: none;
+    font-size: 13px;
+    font-weight: 500;
+    color: green;
+    padding: 10px 20px;
+    margin-bottom: 30px;
+    width: 79px;
+    text-align: left;
+}
 .btn
 {
     height: 40px;
@@ -1789,7 +1804,7 @@ section.meetings-page .pagination ul li a:hover {
     color: green;
     padding: 10px 20px;
     margin-bottom: 30px;
-    width: 154px;
+    width: 173px;
     text-align: left;
 }
 button, input, optgroup, select, textarea {
