--- a/FrontEnd/Laxman/Agroget_FrontEnd/assets/css/profile.css
+++ b/FrontEnd/Laxman/Agroget_FrontEnd/assets/css/profile.css
@@ -7,6 +7,130 @@
     font-family: 'Poppins', sans-serif
 }
 
+body{
+    background-image: url(../../assets/images/1659982.jpg);
+}
+/*For Edit Profile*/
+section.contact-us1 #contact {
+    margin-bottom: 30px;
+  }
+section.contact-us1 {
+   
+    background-position: center center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 0px 0px 0px 0px;
+  }
+  
+  
+  
+  
+  section.contact-us1 #contact {
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 40px;
+  }
+  
+  section.contact-us1 #contact h2 {
+    text-transform: uppercase;
+    color: #1f272b;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 40px;
+    padding-bottom: 20px;
+    font-size: 22px;
+    font-weight: 700;
+  }
+  
+  section.contact-us1 #contact input {
+    width: 100%;
+    height: 40px;
+    border-radius: 20px;
+    background-color: #f7f7f7;
+    outline: none;
+    border: none;
+    box-shadow: none;
+    font-size: 13px;
+    font-weight: 500;
+    color: #7a7a7a;
+    padding: 0px 15px;
+    margin-bottom: 30px;
+  }
+  
+  section.contact-us1 #contact textarea {
+    width: 100%;
+    min-height: 140px;
+    max-height: 180px;
+    border-radius: 20px;
+    background-color: #f7f7f7;
+    outline: none;
+    border: none;
+    box-shadow: none;
+    font-size: 13px;
+    font-weight: 500;
+    color: #7a7a7a;
+    padding: 15px;
+    margin-bottom: 30px;
+  }
+  
+  section.contact-us1 #contact button {
+    font-size: 13px;
+    color: #fff;
+    background-color: #134639;
+    padding: 12px 30px;
+    display: inline-block;
+    border-radius: 22px;
+    font-weight: 500;
+    text-transform: uppercase;
+    transition: all .3s;
+    border: none;
+    outline: none;
+  }
+  
+  section.contact-us1 #contact button:hover {
+    opacity: 0.9;
+  }
+  
+  section.contact-us1 .right-info {
+    background-color: #a12c2f;
+    border-radius: 20px;
+    padding: 40px;
+  }
+  
+  section.contact-us1 .right-info ul li {
+    display: inline-block;
+    border-bottom: 1px solid rgba(250,250,250,0.15);
+    margin-bottom: 30px;
+    padding-bottom: 30px;
+  }
+  
+  section.contact-us1 .right-info ul li:last-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-bottom: none;
+  }
+  
+  section.contact-us1 .right-info ul li h6 {
+    color: #fff;
+    font-size: 15px;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+  
+  section.contact-us1 .right-info ul li span {
+    display: block;
+    font-size: 18px;
+    color: #fff;
+    font-weight: 700;
+  }
+
+  /*For Edit Profile*/
+
+
+
+
+  
+/* 
 nav {
     min-height: 70px
 }
@@ -60,7 +184,7 @@ nav ul li a .cart::after {
     border-radius: 50%;
     background-color: #ff5252;
     top: -1px
-}
+} */
 
 .navbar-toggler:focus {
     box-shadow: none
@@ -68,7 +192,8 @@ nav ul li a .cart::after {
 
 #sidebar {
     padding: 15px 0px 15px 0px;
-    border-radius: 10px
+    border-radius: 10px;
+    position: fixed;
 }
 
 #sidebar .h4 {
@@ -91,8 +216,8 @@ nav ul li a .cart::after {
 }
 
 #sidebar ul li.active {
-    border-left: 5px solid #ff5252;
-    background-color: #44007c
+    border-left: 5px solid #ffffff;
+    background-color: #010002
 }
 
 #sidebar ul li a {
@@ -201,7 +326,7 @@ nav ul li a .cart::after {
 
 .order .btn.btn-primary {
     background-color: #fff;
-    color: #4e2296;
+    color: #af92dd;
     border: 1px solid #4e2296
 }
 
@@ -276,7 +401,7 @@ nav ul li a .cart::after {
 }
 
 .bg-purple {
-    background-color: #55009b
+    background-color: #113f20
 }
 
 .bg-light {
