--- a/FrontEnd/Laxman/Agroget_FrontEnd/assets/css/profile.css
+++ b/FrontEnd/Laxman/Agroget_FrontEnd/assets/css/profile.css
@@ -217,7 +217,7 @@ nav ul li a .cart::after {
 
 #sidebar ul li.active {
     border-left: 5px solid #ffffff;
-    background-color: #010002
+    background-color: #473e14
 }
 
 #sidebar ul li a {
@@ -401,7 +401,7 @@ nav ul li a .cart::after {
 }
 
 .bg-purple {
-    background-color: #113f20
+    background-color: #8f7e36
 }
 
 .bg-light {
