Pages Related to Forgot Password Added

--- a/FrontEnd/Vaishnavi/AgrogetApplication/assets/css/productinfo.css
+++ b/FrontEnd/Vaishnavi/AgrogetApplication/assets/css/productinfo.css
@@ -93,4 +93,10 @@ section.heading-page h6 {
   a:hover, a:active {
     background-color: wheat;
   }
- 
+  .forgot
+  {
+    margin-left: 389px;
+    color:crimson;
+  }
+
+  
