--- a/FrontEnd/Laxman/Agroget_FrontEnd/assets/css/templatemo-edu-meeting.css
+++ b/FrontEnd/Laxman/Agroget_FrontEnd/assets/css/templatemo-edu-meeting.css
@@ -1525,6 +1525,21 @@ section.contact-us #contact input {
   margin-bottom: 30px;
 }
 
+section.contact-us1 #contact select {
+  width: 100%;
+  height: 40px;
+  border-radius: 20px;
+  background-color: #f7f7f7;
+  outline: none;
+  border: none;
+  box-shadow: none;
+  font-size: 13px;
+  font-weight: 500;
+  color: #7a7a7a;
+  padding: 0px 15px;
+  margin-bottom: 30px;
+}
+
 section.contact-us #contact textarea {
   width: 100%;
   min-height: 140px;
